main/default/objects/SIC_Industry_Details__c/SIC_Industry_Details__c.object-meta.xml
<CustomObject>
    <label>SIC Industry Details</label>
    <nameField>
        <label>SIC Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SIC Industry Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>