main/default/objects/SIC_Industry_Details__c/fields/Core_Industry__c.field-meta.xml
<CustomField>
    <fullName>Core_Industry__c</fullName>
    <label>Core Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>