main/default/objects/SIC_Industry_Details__c/fields/Cyber_Eligibility_Status__c.field-meta.xml
<CustomField>
    <fullName>Cyber_Eligibility_Status__c</fullName>
    <label>Cyber Eligibility Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CoverageProductEligibilityStatus</valueSetName>
    </valueSet>
</CustomField>