main/default/objects/SIC_Industry_Details__c/fields/D_O_Eligibility_Status__c.field-meta.xml
<CustomField>
    <fullName>D_O_Eligibility_Status__c</fullName>
    <label>D&amp;O Eligibility Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CoverageProductEligibilityStatus</valueSetName>
    </valueSet>
</CustomField>