main/default/objects/SIC_Industry_Details__c/fields/Fiduciary_Eligibility_Status__c.field-meta.xml
<CustomField>
    <fullName>Fiduciary_Eligibility_Status__c</fullName>
    <label>Fiduciary Eligibility Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CoverageProductEligibilityStatus</valueSetName>
    </valueSet>
</CustomField>