main/default/objects/SIC_Industry_Details__c/fields/SIC_Description__c.field-meta.xml
<CustomField>
    <fullName>SIC_Description__c</fullName>
    <label>SIC Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>