main/default/objects/SIC_Industry_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SIC_Description__c</columns>
    <columns>Core_Industry__c</columns>
    <columns>D_O_Eligibility_Status__c</columns>
    <columns>EPL_Eligibility_Status__c</columns>
    <columns>Fiduciary_Eligibility_Status__c</columns>
    <columns>MPL_Eligibility_Status__c</columns>
    <columns>Crime_Eligibility_Status__c</columns>
    <columns>Cyber_Eligibility_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>